[package]
name = "thud"
version = "0.1.0"
authors = ["Stu Black"]

[dependencies]
chrono = "0.2.*"
glib = "0.0.7"
gtk = "0.0.6"
gtk-sys = "0.2.1"
cairo-rs = "0.0.7"
fern = "0.3.5"
log = "0.3.5"
rand = "0.3.12"
search-graph = { git = "https://github.com/dstu/search-graph.git", branch = "master" }

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false


[[bin]]
name = "console"

# [[bin]]
# name = "gtk"

# [[bin]]
# name = "board_to_image"

[[bin]]
name = "console_mcts"

[[bin]]
name = "gtk_mcts"
