[package]
name = "thud"
version = "0.1.0"
authors = ["Stu Black"]

[dependencies]
# cairo-rs = "0.0.7"
chrono = "0.2.*"
clap = "2.2.*"
fern = "0.3.5"
# glib = "0.0.7"
# gtk = "0.0.6"
# gtk-sys = "0.2.1"
log = "0.3.5"
rand = "0.3.12"
search-graph = { git = "https://github.com/dstu/search-graph.git", branch = "master" }
thud-ai = { path = "./thud_ai" }
thud-game = { path = "./thud_game" }
mcts = { path = "./mcts" }

[profile.release]
lto = true

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false

[[bin]]
name = "console"

# [[bin]]
# name = "gtk"

# [[bin]]
# name = "board_to_image"

[[bin]]
name = "console_mcts"

# [[bin]]
# name = "gtk_mcts"

[[bin]]
name = "console_play"

[[bin]]
name = "console_mc"

[[bin]]
name = "generate_adjacency_tables"
