[package]
name = "thud-ui-console"
version = "0.1.0"
authors = ["Stu Black"]

[dependencies]
clap = "2.2.*"
log = "0.3.5"
mcts = { path = "../mcts" }
thud-game = { path = "../thud_game" }
thud-ui-common = { path = "../thud_ui_common" }
rand = "0.3.12"

[profile.release]
lto = true

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
